feat(KSTIP-1605): everything done
