# backend/src/main/java/ch/dvbern/stip/generated/dto/BuchhaltungSaldokorrekturDto.java
@@ -1,0 +1,129 @@
+package ch.dvbern.stip.generated.dto;
+
+import com.fasterxml.jackson.annotation.JsonTypeName;
+import java.util.UUID;
+import java.io.Serializable;
+import jakarta.validation.constraints.*;
+import jakarta.validation.Valid;
+
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonValue;
+import com.fasterxml.jackson.annotation.JsonTypeName;
+
+
+
+@JsonTypeName("BuchhaltungSaldokorrektur")
+@jakarta.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJAXRSSpecServerCodegen")@lombok.NoArgsConstructor
+@lombok.AllArgsConstructor
+@org.eclipse.microprofile.openapi.annotations.media.Schema(hidden=true)
+
+public class BuchhaltungSaldokorrekturDto  implements Serializable {
+  private @Valid Integer betrag;
+  private @Valid String comment;
+  private @Valid UUID gesuchId;
+
+  /**
+   **/
+  public BuchhaltungSaldokorrekturDto betrag(Integer betrag) {
+    this.betrag = betrag;
+    return this;
+  }
+
+  
+  @JsonProperty("betrag")
+  @NotNull
+  public Integer getBetrag() {
+    return betrag;
+  }
+
+  @JsonProperty("betrag")
+  public void setBetrag(Integer betrag) {
+    this.betrag = betrag;
+  }
+
+  /**
+   **/
+  public BuchhaltungSaldokorrekturDto comment(String comment) {
+    this.comment = comment;
+    return this;
+  }
+
+  
+  @JsonProperty("comment")
+  @NotNull
+  public String getComment() {
+    return comment;
+  }
+
+  @JsonProperty("comment")
+  public void setComment(String comment) {
+    this.comment = comment;
+  }
+
+  /**
+   **/
+  public BuchhaltungSaldokorrekturDto gesuchId(UUID gesuchId) {
+    this.gesuchId = gesuchId;
+    return this;
+  }
+
+  
+  @JsonProperty("gesuchId")
+  @NotNull
+  public UUID getGesuchId() {
+    return gesuchId;
+  }
+
+  @JsonProperty("gesuchId")
+  public void setGesuchId(UUID gesuchId) {
+    this.gesuchId = gesuchId;
+  }
+
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    BuchhaltungSaldokorrekturDto buchhaltungSaldokorrektur = (BuchhaltungSaldokorrekturDto) o;
+    return Objects.equals(this.betrag, buchhaltungSaldokorrektur.betrag) &&
+        Objects.equals(this.comment, buchhaltungSaldokorrektur.comment) &&
+        Objects.equals(this.gesuchId, buchhaltungSaldokorrektur.gesuchId);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(betrag, comment, gesuchId);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class BuchhaltungSaldokorrekturDto {\n");
+    
+    sb.append("    betrag: ").append(toIndentedString(betrag)).append("\n");
+    sb.append("    comment: ").append(toIndentedString(comment)).append("\n");
+    sb.append("    gesuchId: ").append(toIndentedString(gesuchId)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+
+
+}
+
